--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-03-08  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* tests/data/ja/Makefile.am (EXTRA_DIST): Add word2000.doc.
+
+	* tests/data/ja/word2000.doc: New file.
+
 2000-03-08  Ken-ichi Hirose  <kenzo-@tama.or.jp>
 
 	* scripts/mknmz.in (load_filters): Add selecting same mediatype
