--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-03-12  Rei FURUKAWA  <furukawa@tcp-ip.or.jp>
+
+	* pl/nmzidx.pl (write_status): Add close.
+	(write_status): Restore changes at 02-27.
+
 2000-03-11  Masao Takaku  <masao@ulis.ac.jp>
 
 	* script/mknmz.in (re_exec): Store $file_count.
