--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,26 @@
 2000-03-12  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
-	* nmz/hlist.c 	(intcmp): New function.
-	(field_scmp): Use nmz_intcmp().
+	* configure.in (AC_OUTPUT): Add tests/data/query/Makefile.
+
+	* tests/Makefile.am (TESTS): Add mknmz-6 and namazu-query
+
+	* tests/mknmz-6 (TARGET): New file.
+
+	* tests/namazu-query: New file.
+
+	* tests/data/query/1: New file.
+
+	* tests/data/query/3: New file.
+
+	* tests/data/query/3: New file.
+
+	* tests/data/query/Makefile.am: New file.
+	(EXTRA_DIST): Add 1, 2, and 3.
+
+	* tests/Makefile.am (clean-local): Add tmp.*
+
+	* nmz/hlist.c (intcmp): New function.
+	(field_scmp): Use intcmp().
 	(date_cmp): Likewise.
 	(score_cmp): Likewise.
 	(field_ncmp): Likewise.
