--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2000-03-12  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tests/Makefile.am (TESTS): Add namazu-5 and namazu-6 and remove
+	namazu-query and namazu-nasty-cases.
+
+	* tests/namazu-6: Renamed from namazu-query.
+
+	* tests/namazu-5: Renamed from namazu-nasty-cases.
+
 	* tests/namazu-nasty-cases: Improve assertion mechanism.
 
 	* configure.in (AC_OUTPUT): Add tests/data/query/Makefile.
