--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-03-17  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* scripts/mknmz.in (generate_uri): Use
+	codeconv::shiftjis_to_eucjp() for $file and codeconv::toeuc() for
+	$fragment. 
+
 	* pl/codeconv.pl (shiftjis_to_eucjp): Check util::islang("ja").
 
 	* scripts/mknmz.in (generate_uri): Use codeconv::shiftjis_to_eucjp
