* doc/en/nmz.html: Documentation changed.
	* doc/ja/nmz.html: Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-03-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* doc/en/nmz.html: Documentation changed.
+
+	* doc/ja/nmz.html: Likewise.
+
 2000-03-17  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* Namazu: Version 2.0.2 released.
