--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Overview of Changes in Namazu 2.0.3 - Apl 05, 2000
+
+* Fix several bugs.
+
+Overview of Changes in Namazu 2.0.2 - Mar 17, 2000
+
+* Fix several small bugs.
+* Added excel.pl to use xlHtml for process Microsoft Excel document.
+* Abolish mknmz --ole option that is not needed.
+* Added mknmz --html-split option for <a name="...">.
+
 Overview of Changes in Namazu 2.0.1 - Feb 28, 2000
 
 * Test suites are supplied. Just type `make check'.
