--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,18 @@
 Overview of Changes in Namazu 2.0.3 - Apl 05, 2000
 
+* Fix a non-critical security hole: An arbitrary HTML tag in a query
+  is printed as it is in search results.
 * Fix several bugs.
+* Add a couple of test suites.
+* Support Perl 5.6.0. No warnings is no longer printed.
+* Speed up mknmz.  Finding targets becomes fast by orders of magnitude.
 
 Overview of Changes in Namazu 2.0.2 - Mar 17, 2000
 
-* Fix several small bugs.
-* Added excel.pl to use xlHtml for process Microsoft Excel document.
+* Fix several bugs.
+* Add excel.pl for handling a Microsoft Excel document with xlHtml.
 * Abolish mknmz --ole option that is not needed.
-* Added mknmz --html-split option for <a name="...">.
+* Add mknmz --html-split option for handling <a name="...">.
 
 Overview of Changes in Namazu 2.0.1 - Feb 28, 2000
 
