--- a/README
+++ b/README
@@ -26,6 +26,18 @@ What is Namazu?
      http://www.namazu.org/
 
 
+Where is the documentation?
+
+   In the doc directory in the distribution. English documents are 
+   in the en sub-directory, and Japanese documents are in the ja
+   sub-directory.
+
+
+How to install it?
+
+   See the file INSTALL for details.
+
+
 What is Namazu Project?
 
    Namazu Project is the group of developing and maintaining
