--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-04-05 16:29+0900\n"
+"POT-Creation-Date: 2000-04-08 07:50+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -806,9 +806,11 @@ msgstr ""
 "                           <meta name=\"ROBOTS\" content=\"NOINDEX\">\n"
 "  -M, --meta               HTMLの metaタグをフィールド指定検索に用いる\n"
 "  -r, --replace=CODE       URIを置換するためのコードを指定する\n"
-"      --html-split         HTMLファイルを <a name=\"...\"> 単位で分割処理する\n"
+"      --html-split         HTMLファイルを <a name=\"...\"> "
+"単位で分割処理する\n"
 "      --mtime=INT          変更日制限 find(1) の -mtime と同じ規則\n"
-"                           例: -50 で 50 日以内、+50 で 50 日より古いものだけ\n"
+"                           例: -50 で 50 日以内、+50 で 50 "
+"日より古いものだけ\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
@@ -854,7 +856,7 @@ msgstr "題名なしの文書"
 msgid "is excluded because of <meta name=\"robots\" ...>"
 msgstr "は <meta name=\"robots\" ...> によって除外されています"
 
-#: filter/msword.pl:127
+#: filter/msword.pl:128
 msgid "Unsupported format: "
 msgstr "未対応の形式: "
 
