--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Wed May 24 17:32:08 2000  Masao Takaku  <masao@ulis.ac.jp>
+
+	* ja.po: Update messages.
+
 2000-05-02  Masao Takaku  <masao@ulis.ac.jp>
 
 	* ja.po: Fix an inappropriate message.
