--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,4 @@
-Wed May 24 17:32:08 2000  Masao Takaku  <masao@ulis.ac.jp>
+2000-05-24  Masao Takaku  <masao@ulis.ac.jp>
 
 	* ja.po: Update messages.
 
