--- a/Search-Namazu/ChangeLog
+++ b/Search-Namazu/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-24  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Namazu.pm (Search): Removed checking return value of 
+	nmz_setlang().
+
 2000-05-25  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Version 0.11.
