--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-12  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm : Added image/png entry.
+	(suggested by Jamie LeTual. Thanks.)
+	Version 1.08.
+
 2000-08-09  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* MMagic.pm (new): Added '\.' in $self->{FILEEXTS}.
