* README: s/Namazu a full text retrieval search system/ 	Namazu: a Full-Text Search Engine/

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-          Namazu a full text retrieval search system
+          Namazu: a Full-Text Search Engine
 
 
 What is Namazu?
 
-   Namazu is a full-text search system intended for easy
+   Namazu is a full-text search engine intended for easy
    use. Not only does it work as a small or medium scale Web
    search engine, but also as a personal search system for
    email or other files.
