--- a/Search-Namazu/ChangeLog
+++ b/Search-Namazu/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-06  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Namazu.pm : Fixed bad example code.
+
 2000-08-24  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Namazu.pm (Search): Removed checking return value of 
