--- a/Search-Namazu/ChangeLog
+++ b/Search-Namazu/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-19  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Namazu.pm: Version 0.13.
+	0.12 was not fixed no-result return bug.
+
 2001-01-17  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Namazu.pm: Version 0.12.
