--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,18 @@
+2001-02-09  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* MMagic.pm (checktype_data): Changed evaluation sequence of
+	binary-checking and specials-checking.
+	Version 1.12.
+
+2000-12-11  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Discarded disallowEightbit().
+	Add new variable "allowEightbit".
+	Version 1.11.
+
+	* MMagic.pm (disallowEightbit): Added new entry.
+	Version 1.10.
+
 2000-10-10  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* MMagic.pm: Removed a text/x-info related entry.
