2001-08-20  Hajime BABA <hajime.baba@nao.ac.jp>
        * ChangeLog, ChangeLog.1, doc/en/manual.html, filter/postscript.pl,
          man/mknmz.1, nmz/util.c, pl/usage.pl, pl/util.pl, po/es.po,
          po/fr.po, po/ja.po, po/ja_JP.SJIS.po, po/namazu.pot,
          scripts/mknmz.in, src/cgi.c:  Fixed trivial typos.

--- a/ChangeLog.1
+++ b/ChangeLog.1
@@ -195,7 +195,7 @@ v1.4.0.0-alpha-2
 v1.4.0.0-alpha-1
         [1999-02-13]
 
-	* Fixed score weighting mechanism bug occured with ChaSen
+	* Fixed score weighting mechanism bug occurred with ChaSen
 	  - [masao@ulis.ac.jp (Masao Takaku)] - report
 	* Abolished NMZ.h, NMZ.le, NMZ.be
 	  - [Satoru Takabayashi <satoru@isoternet.org>] -
@@ -225,7 +225,7 @@ v1.3.1.0-alpha-10
 
 	* Added eucjp_to_shiftjis() function to codeconv.pl
 	  - [Satoru Takabayashi <satoru@isoternet.org>] -
-	* Modified usage() bug in mknmz (occured on Win32 or OS/2)
+	* Modified usage() bug in mknmz (occurred on Win32 or OS/2)
 	  - [Kaz SHiMZ <kshimz@sfc.co.jp>] - report
 	* Modified configure.in, etc. for OS/2
 	  - [Kaz SHiMZ <kshimz@sfc.co.jp>] - patch
