--- a/man/mknmz.1
+++ b/man/mknmz.1
@@ -62,7 +62,7 @@ use KAKASI for analyzing Japanese.
 \fB\-m\fR, \fB\-\-use\-chasen\-noun\fR
 use ChaSen for extracting only nouns.
 .HP
-\fB\-L\fR, \fB\-\-indexing\-lang\fR=\fILANG\fR index with language specific proccessing.
+\fB\-L\fR, \fB\-\-indexing\-lang\fR=\fILANG\fR index with language specific processing.
 .SS "Text Operations:"
 .TP
 \fB\-E\fR, \fB\-\-no\-edge\-symbol\fR
