--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: nmz/util.c:491
-msgid "Fatal error occured!"
+msgid "Fatal error occurred!"
 msgstr "致命的なエラー"
 
 #: nmz/util.c:494
@@ -319,7 +319,7 @@ msgid "unable to require "
 msgstr "以下のモジュールが require できません "
 
 #: scripts/mknmz.in:807
-msgid "Faild to call "
+msgid "Failed to call "
 msgstr "呼び出しに失敗 "
 
 #: scripts/mknmz.in:859
@@ -577,7 +577,7 @@ msgstr ""
 msgid ""
 "\n"
 "\n"
-"== overlapped docunumets ==\n"
+"== overlapped documents ==\n"
 msgstr ""
 "\n"
 "\n"
@@ -714,7 +714,7 @@ msgid "not an IO::File/FileHandle object!\n"
 msgstr "IO::File/FileHandle オブジェクトではありません\n"
 
 #: pl/util.pl:212
-msgid "Remove tmporary files:"
+msgid "Remove temporary files:"
 msgstr "一時ファイルを削除:"
 
 #: pl/util.pl:256
@@ -773,7 +773,7 @@ msgid ""
 "  -c, --use-chasen         use ChaSen for analyzing Japanese.\n"
 "  -k, --use-kakasi         use KAKASI for analyzing Japanese.\n"
 "  -m, --use-chasen-noun    use ChaSen for extracting only nouns.\n"
-"  -L, --indexing-lang=LANG index with language specific proccessing.\n"
+"  -L, --indexing-lang=LANG index with language specific processing.\n"
 "\n"
 "Text Operations:\n"
 "  -E, --no-edge-symbol     remove symbols on edge of word.\n"
