--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: ENCODING\n"
 
 #: nmz/util.c:491
-msgid "Fatal error occured!"
+msgid "Fatal error occurred!"
 msgstr ""
 
 #: nmz/util.c:494
@@ -276,8 +276,8 @@ msgstr ""
 msgid "unable to require "
 msgstr ""
 
-#: scripts/mknmz.in:807
-msgid "Faild to call "
+#: scripts/mknmz.in:805
+msgid "Failed to call "
 msgstr ""
 
 #: scripts/mknmz.in:859
@@ -526,7 +526,7 @@ msgstr ""
 msgid ""
 "\n"
 "\n"
-"== overlapped docunumets ==\n"
+"== overlapped documents ==\n"
 msgstr ""
 
 #: scripts/mknmz.in:1716
@@ -651,7 +651,7 @@ msgid "not an IO::File/FileHandle object!\n"
 msgstr ""
 
 #: pl/util.pl:212
-msgid "Remove tmporary files:"
+msgid "Remove temporary files:"
 msgstr ""
 
 #: pl/util.pl:256
@@ -710,7 +710,7 @@ msgid ""
 "  -c, --use-chasen         use ChaSen for analyzing Japanese.\n"
 "  -k, --use-kakasi         use KAKASI for analyzing Japanese.\n"
 "  -m, --use-chasen-noun    use ChaSen for extracting only nouns.\n"
-"  -L, --indexing-lang=LANG index with language specific proccessing.\n"
+"  -L, --indexing-lang=LANG index with language specific processing.\n"
 "\n"
 "Text Operations:\n"
 "  -E, --no-edge-symbol     remove symbols on edge of word.\n"
