--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ Overview of Changes in Namazu 2.0.7 (draft) - Aug 31, 2001
 * Added extensions of Ichitaro 7 and 8.
 * Fixed the bug when target directories contain the
   current directory. (Only Win32 Platforms)
+* Fixed the AND query bug that namazu ignores
+  the keywords which don't match at all.
+* More portability improvements.
 
 Overview of Changes in Namazu 2.0.6 - Aug 10, 2001
 
