(sync with stable-2-0) * nmz/{search,util}.c: Keep consistency for the error message with mknmz, when the index is old type, and also tell correctly as index is not found when index does not exist. Some related info in Japanese available at: http://www.namazu.org/ml/namazu-devel-ja/msg02328.html
* po/{es,fr,ja,ja_JP.SJIS}.po: Ditto.

--- a/po/es.po
+++ b/po/es.po
@@ -66,9 +66,8 @@ msgid "The index is locked for maintenance"
 msgstr "El índice está bloqueado para mantenimiento"
 
 #: nmz/util.c:536
-#, fuzzy
-msgid "The index should be old format."
-msgstr "El índice está bloqueado para mantenimiento"
+msgid "Present index is old type. it's unsupported."
+msgstr "El índice actual es de un tipo antiguo. No es soportado."
 
 #: nmz/util.c:539
 msgid "Unknown error. Report bug!"
